tests/e2e/nested_service_block4.story
when http server listen path:"/"
    http server as client
        break
